--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Webpage</title>
+    <style>
+        body {
+            font-family: monospace;
+            color: azure;
+            padding: 30px;
+        }
+
+        .header {
+            font-weight: 400;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1 class="header">Hello World </h1>
+    <br>
+    <p>Welcome to Git Tuts!</p>
 </body>
 </html>
